# survsim

./: Cargo.toml  a_problem.json  benchmark-2024-12-31.txt  benchmark-2025-01-10_grb_and_highs_w_bound.txt  benchmark.csv  first_problem.json  insights.md  latextable.py  no_problem.json  r_41.json  r_42.json  r_d1.json  r_d2.json  r_p1.json  r_p2.json  regression1.json  regression10.json  regression11.json  regression12.json  regression2.json  regression3.json  regression4.json  regression5.json  regression6.json  regression7.json  regression8.json  regression8_.json  regression9.json  tiny_problem.json  toocomplicated.json
bench/: large_d6_0.json  large_d6_1.json  large_d6_2.json  large_d6_3.json  large_d6_4.json  large_d6_5.json  medium_ctc_d6_0.json  medium_ctc_d6_1.json  medium_ctc_d6_2.json  medium_ctc_d6_4.json  medium_ctc_d6_5.json  s1_tiny_d2_0.json  s1_tiny_d2_2.json  s1_tiny_d2_3.json  s2_small_d3_1.json  s2_small_d3_2.json  s3_small_d5_0.json  s3_small_d5_3.json  s3_small_d5_4.json  s3_small_d5_5.json  s4_small_ctc_d6_1.json  s4_small_ctc_d6_2.json  s4_small_ctc_d6_4.json  s4_small_ctc_d6_6.json  s5_medium_ctc_d6_3.json  s5_medium_ctc_d6_6.json  s5_medium_ctc_d6_7.json  s5_medium_ctc_d6_8.json  s6_large_ctc2_d6_6.json  small_ctc_d6_0.json  small_ctc_d6_3.json  small_ctc_d6_5.json  small_d3_0.json  small_d3_3.json  small_d3_4.json  small_d3_5.json  small_d5_1.json  small_d5_2.json  tiny_d1_0.json  tiny_d1_1.json  (+3 more)
controller/: Cargo.toml
controller/src/: backend.rs  executive.rs  lib.rs  main.rs  parse_report.rs  plan.rs
docs/: index.html  main.js  main_bg.wasm  worker.js  worker_bg.wasm
mqtt_bins/: Cargo.toml
planner/: Cargo.toml
planner/src/: colgen.rs  colgen_tests.rs  decomposition.rs  gbfs.rs  greedy.rs  highs_status.rs  lib.rs  lpsolver.rs  milp.rs  shortest_path.rs  txgraph.rs
planner/src/extsolvers/: gurobi.rs  highs.rs  mod.rs
planner_colgen/: Cargo.toml
planner_colgen/src/: lib.rs
sim/: Cargo.toml
sim/src/: lib.rs  main.rs
structs/: Cargo.toml
structs/src/: backend.rs  lib.rs  plan.rs  problem.rs  report.rs
viz/: Cargo.toml
viz/src/: lib.rs  main.rs
webdemo/: Cargo.toml  Trunk.toml  index.html
webdemo/assets/: sw.js
webdemo/src/: app.rs  lib.rs  main.rs
