[package]
name = "survsim_planner"
version = "0.1.0"
edition = "2021"


[features]
default = ["highs"]
highs=["dep:highs-sys"]
gbfs=["dep:serde_json"]

[dependencies]
env_logger = "0.11.5"
hprof = "0.1.3"
log = "0.4.22"
ordered-float = "4.3.0"
survsim_structs = { path = "../structs" }
tinyvec = { version = "1.8.0", features = ["alloc"] }

serde_json = { version="1.0.128", optional=true}
highs-sys = { version = "1.6.4", features = ["libz"], optional=true }


[dev-dependencies]
paho-mqtt = "0.12.5"
serde_json = { version="1.0.128"}

