[package]
name = "survsim_webdemo"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.30"
eframe = { version = "0.30", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "x11"
] }
log = "0.4"
survsim_structs = { path = "../structs" }
survsim_sim = { path = "../sim" }
survsim_viz = { path = "../viz" }
survsim_controller = { path = "../controller" }
survsim_planner = { path = "../planner", default-features = false }
web-time = "1.1.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Blob",
    "BlobPropertyBag",
    "console",
    "DedicatedWorkerGlobalScope",
    "Document",
    "HtmlElement",
    "Location",
    "MessageEvent",
    "Node",
    "Text",
    "Url",
    "Window",
    "Worker",
] }
[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

[workspace]
